# ChangeLog for games-strategy/wesnoth
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.48 2005/04/26 03:59:02 mr_bones_ Exp $

*wesnoth-0.9.1 (26 Apr 2005)

  26 Apr 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-0.9.1.ebuild:
  version bump

*wesnoth-0.9.0 (11 Apr 2005)

  11 Apr 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-0.9.0.ebuild:
  version bump

*wesnoth-0.8.11 (22 Feb 2005)

  22 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-0.8.11.ebuild:
  version bump

*wesnoth-0.8.7 (12 Feb 2005)

  12 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-0.8.10.ebuild,
  -wesnoth-0.8.7.ebuild, -wesnoth-0.8.8.ebuild, -wesnoth-0.8.9.ebuild:
  filter more flags (bug #81749); clean old ebuilds

*wesnoth-0.8.10 (07 Feb 2005)

  07 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-0.8.10.ebuild:
  version bump

*wesnoth-0.8.9 (01 Feb 2005)

  01 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-0.8.9.ebuild:
  version bump (bug #79562); switch to lite use flag

  20 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org>
  -files/0.8.4-conf.patch, -files/0.8.5-conf.patch, -wesnoth-0.8.1.ebuild,
  -wesnoth-0.8.2.ebuild, -wesnoth-0.8.4.ebuild, -wesnoth-0.8.5.ebuild,
  -wesnoth-0.8.ebuild:
  clean old ebuilds

*wesnoth-0.8.8 (05 Dec 2004)

  05 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-0.8.8.ebuild:
  version bump

  02 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> :
  version bump

*wesnoth-0.8.5 (05 Oct 2004)

  05 Oct 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.8.5-conf.patch, +wesnoth-0.8.5.ebuild:
  version bump

  12 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-0.8.4.ebuild:
  use mirror: in SRC_URI; tidy

*wesnoth-0.8.4 (11 Sep 2004)

  11 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.8.4-conf.patch, +wesnoth-0.8.4.ebuild: